[css] hack to prevent horizontal jump

--- a/expenses/static/custom.css
+++ b/expenses/static/custom.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .container {
     max-width: 1360px;
 }
